--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <title>Devops Demo</title>
 <body>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
+<h1>Coming soon</h1>
 
 </body>
 </html>
